--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ body{
   /*
   border:1px solid red;
   */
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   /*height: 712px; height retirado para ter uma altura fluída*/
 
   /*
