--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
 
   /*background: color image repeat position/size*/
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 #container{
@@ -203,4 +204,15 @@ footer{
 
   font-size: 14px;
   font-weight: 400;
+}
+
+/* media queries */
+@media (min-width: 700px){
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
